--- a/contact_tracing/Info.plist
+++ b/contact_tracing/Info.plist
@@ -21,5 +21,13 @@
 			</array>
 		</dict>
 	</dict>
+    <key>NSBluetoothAlwaysUsageDescription</key>
+        <string>The app uses bluetooth to find, connect and transfer data between different devices</string>
+            <key>NSBluetoothPeripheralUsageDescription</key>
+                <string>The app uses bluetooth to find, connect and transfer data between different devices</string>
+                <key>UIBackgroundModes</key>
+            <array>
+        <string>bluetooth-central</string>
+    </array>
 </dict>
 </plist>
